--- a/homepage.css
+++ b/homepage.css
@@ -1,10 +1,10 @@
 html{
-     background: url("wolverine.jpg");
+     background: url("blackpanther.jpg");
      background-size: 100% 100%;
 }
 
-h1{
-   color:red;
+#wayne{
+   color:purple;
 }
 
 #tyler{
